--- a/docs/src/pages/operators/index.mdx
+++ b/docs/src/pages/operators/index.mdx
@@ -16,3 +16,6 @@ simple one.
 
 If you wish to add your operator to Tattle Search, please make a PR with your operator and test for it. In the
 future we may consider a plugin architecture to allow Tattle Search to enable third party operators.
+
+It is essential to include working tests in your operator code. Please ensure your test demonstrates all ways in which
+the operator can be used. This serves as documentation for anyone who wishes to use it in their code.
