doc :  add todo to convert an image search model into an operator

--- a/docs/src/pages/todo.mdx
+++ b/docs/src/pages/todo.mdx
@@ -6,3 +6,6 @@ title: ToDo
 
 - [ ] Ensure that a CPU version of pytorch is installed and not a GPU version.
       "-f https://download.pytorch.org/whl/torch_stable.html torch==1.8.1+cpu"
+
+- [ ] Implement an operator using this [model](https://www.sbert.net/examples/applications/image-search/README.html)
+      Try out to see how useful it is to do search.
