--- a/docs/src/pages/todo.mdx
+++ b/docs/src/pages/todo.mdx
@@ -9,3 +9,5 @@ title: ToDo
 
 - [ ] Implement an operator using this [model](https://www.sbert.net/examples/applications/image-search/README.html)
       Try out to see how useful it is to do search.
+
+- [ ] Add index name as a paramter for vid-vec-rep-resnet operator
