--- a/docs/src/pages/operators/detect-text-in-image-tesseract.mdx
+++ b/docs/src/pages/operators/detect-text-in-image-tesseract.mdx
@@ -1,1 +1,17 @@
-## documentation for tesseract OCR
+## Documentation for Tesseract OCR Operator
+
+For each language support, we need to install separate tesseract operators for each language. Right now the current operator only supports English and Hindi languages. 
+
+For Linux, you can follow these links to understand how and what modules to install for each language.
+- https://tesseract-ocr.github.io/tessdoc/Installation.html
+- https://www.loc.gov/standards/iso639-2/php/code_list.php
+
+To extract text from an image, we pass the image through a tesseract function like this
+
+```
+data = pytesseract.image_to_string(image, lang='eng+hin', config='--psm 6 --oem 1')
+```
+
+Here the config settings help us define some more insight into the image and LSTM blocks for the image extraction engines. 
+
+You can take a look at the operator and the test of the operator for the entire code.
