added notebook for storage

--- a/src/notebooks/search_similar_videos.ipynb
+++ b/src/notebooks/search_similar_videos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,43 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# sys.path.append()"
+    "sys.path.append(os.path.abspath('../../app'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sys.path.append(os.path.abspath('../../app'))\n",
-    "# sys.path.append(os.path.abspath('../../app/core'))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['/usr/local/lib/python311.zip', '/usr/local/lib/python3.11', '/usr/local/lib/python3.11/lib-dynload', '', '/usr/app/venv/lib/python3.11/site-packages', '/usr/app', '/usr/app', '/usr/app/core', '/usr/app']\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(sys.path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,39 +35,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# https://github.com/aatmanvaidya/audio-files/raw/main/feluda-media/en-speech.mp4\n",
-    "# https://github.com/aatmanvaidya/audio-files/raw/main/feluda-media/hi-speech.mp4\n",
-    "# https://github.com/aatmanvaidya/audio-files/raw/main/feluda-media/ta-speech.mp4"
+    "video_links = [\n",
+    "    \"https://github.com/aatmanvaidya/audio-files/raw/main/feluda-media/en-speech.mp4\",\n",
+    "    \"https://github.com/aatmanvaidya/audio-files/raw/main/feluda-media/hi-speech.mp4\",\n",
+    "    \"https://github.com/aatmanvaidya/audio-files/raw/main/feluda-media/ta-speech.mp4\"\n",
+    "]\n",
+    "\n",
+    "file_names = [x.split('/')[-1] for x in video_links]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Installing packages for vid_vec_rep_clip\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/app/venv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "/usr/app/venv/lib/python3.11/site-packages/transformers/tokenization_utils_base.py:1601: FutureWarning: `clean_up_tokenization_spaces` was not set. It will be set to `True` by default. This behavior will be depracted in transformers v4.45, and will be then set to `False` by default. For more details check this issue: https://github.com/huggingface/transformers/issues/31884\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Downloading video from URL\n",
       "100% [..............................................................................] 48488 / 48488\n",
+      "Video downloaded\n",
+      "Downloading video from URL\n",
+      "100% [..............................................................................] 47732 / 47732\n",
+      "Video downloaded\n",
+      "Downloading video from URL\n",
+      "100% [..............................................................................] 51309 / 51309\n",
       "Video downloaded\n"
      ]
     }
    ],
    "source": [
-    "temp = audio_file_path = VideoFactory.make_from_url(\n",
-    "    r\"https://github.com/aatmanvaidya/audio-files/raw/main/feluda-media/en-speech.mp4\"\n",
-    ")"
+    "def get_vector_representation_of_video(video_links):\n",
+    "    \n",
+    "    result = []\n",
+    "    vid_vec_rep_clip.initialize({})\n",
+    "    for link in video_links:\n",
+    "        video = VideoFactory.make_from_url(link)\n",
+    "        vector = vid_vec_rep_clip.run(video)\n",
+    "        result.append(vector)\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "final_embeddings = get_vector_representation_of_video(video_links)\n",
+    "        \n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# temp  = VideoFactory.make_from_url(\n",
+    "#     r\"https://raw.githubusercontent.com/tattle-made/feluda/main/src/core/operators/sample_data/sample-cat-video.mp4\"\n",
+    "# )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -116,16 +138,18 @@
     }
    ],
    "source": [
-    "vid_vec_rep_clip.initialize({})\n",
-    "t = vid_vec_rep_clip.run(temp)"
+    "# vid_vec_rep_clip.initialize({})\n",
+    "# t = vid_vec_rep_clip.run(temp)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Code to initialize Elastic search instance\n",
+    "\n",
     "param_dict = {\n",
     "    \"host_name\": \"es\",\n",
     "    \"text_index_name\": \"text\",\n",
@@ -151,13 +175,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "en-speech.mp4 <generator object gendata at 0x757f15c93920>\n",
+      "----> 6 (0, [])\n",
+      "result: {'message': 'multiple media stored'}\n",
+      "hi-speech.mp4 <generator object gendata at 0x757f15c93060>\n",
+      "----> 6 (0, [])\n",
+      "result: {'message': 'multiple media stored'}\n",
+      "ta-speech.mp4 <generator object gendata at 0x757f15c93840>\n",
       "----> 6 (0, [])\n",
       "result: {'message': 'multiple media stored'}\n"
      ]
@@ -177,24 +210,36 @@
     "            base_doc[\"_index\"] = \"video\"\n",
     "            base_doc[\"vid_vec\"] = vector[\"vid_vec\"]\n",
     "            base_doc[\"is_avg\"] = vector[\"is_avg\"]\n",
-    "            base_doc[\"duration\"] = vector[\"duration\"]\n",
-    "            base_doc[\"n_keyframes\"] = vector[\"n_keyframes\"]\n",
     "            yield base_doc\n",
     "\n",
     "    return generator_doc\n",
     "\n",
-    "doc = generate_document('temp.mp4',t)\n",
-    "media_type = MediaType.VIDEO\n",
-    "result = es.store(media_type, doc)\n",
-    "print(\"result:\", result)\n"
+    "\n",
+    "for file_name,embedding in zip(file_names,final_embeddings):\n",
+    "    print(file_name,embedding)\n",
+    "    doc = generate_document(file_name,embedding)\n",
+    "    media_type = MediaType.VIDEO\n",
+    "    result = es.store(media_type, doc)\n",
+    "    print(\"result:\", result)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "health status index uuid                   pri rep docs.count docs.deleted store.size pri.store.size dataset.size\n",
+      "yellow open   video B1F4p1UGTMy-lFPMjw8g3g   1   1         24            0    270.9kb        270.9kb      270.9kb\n"
+     ]
+    }
+   ],
+   "source": [
+    "!curl -X GET \"http://es:9200/_cat/indices?v\""
+   ]
   }
  ],
  "metadata": {
